--- a/FicherosTFG/02Previos.tex
+++ b/FicherosTFG/02Previos.tex
@@ -233,14 +233,14 @@ de lo que se obtiene, que el término $\left.u_tu_x\right|_0^L$ se anula en para 
 
 Continuando con \eqref{eq:sutituyendo}, y utilizando la regla de la cadena obtenemos:
 
-\begin{equation*}
+\begin{equation}\label{funcionalenergia}
 	\begin{split}
 		0&=\int_0^L u_{t}u_{tt} dx + c^2\int_0^L u_{x}u_{tx} dx\\
 		&=\int_0^L\frac{1}{2}\frac{\partial}{\partial t}u_{t}^2 dx +c^2 \int_0^L\frac{1}{2}\frac{\partial}{\partial t}u_{x}^2 dx\\
 		&= \frac{1}{2}\frac{\partial}{\partial t}\int_0^Lu_{t}^2 dx +c^2 \frac{1}{2}\frac{\partial}{\partial t}\int_0^L u_{x}^2 dx\\
 		&=\frac{\partial}{\partial t}\left( \frac{1}{2}||u_t||_{L^2(\Omega)}^2+\frac{c^2}{2}||u_x||_{L^2(\Omega)}^2\right)
 	\end{split}
-\end{equation*} 
+\end{equation} 
 
 Definiendo de la siguiente forma,
 
