--- a/FicherosTFG/agradecimientos.tex
+++ b/FicherosTFG/agradecimientos.tex
@@ -5,12 +5,12 @@ Cuando comencé el grado en matemáticas con todos mis compañeros, creo que ningun
 
 Por todo esto quiero agradecerles a ellos y sobre todo a mi compañera y amiga Marina por estar a mi lado en cada paso del camino, porque gracias a eso hemos conseguido avanzar juntas. \\
 
-Creo que todos tenemos que agradecer a nuestros profesores de la carrera, por intentar que aprendamos y seamos críticos. Sobre todo a mis directores de este trabajo por su paciencia infinita y su ayuda en todo momento.\\
+Creo que todos tenemos que agradecer a nuestros profesores de la carrera, por intentar que aprendamos y seamos críticos. Sobre todo a mis directores de este trabajo, por su paciencia infinita y su ayuda en todo momento.\\
 
 
-También debo agradecer a mis padres, por creer siempre en mi y escucharme cada día, aún cuando ellos no comprendían lo que les contaba. Gracias, por construirme como persona y hacerme llegar a donde estoy.\\
+También quiero agradecer a mis padres, por creer siempre en mi y escucharme cada día, aún cuando ellos no comprendían lo que les contaba. Gracias, por apoyarme a lo largo de los años y construirme como persona y hacerme llegar a donde estoy.\\
 
-Por último quiero agradecer a mi novio, porque estos últimos años, tan duros a la par que gratificantes, ha sabido llenarme de confianza.\\
+Por último agradecer a mi novio, porque estos últimos años, tan duros a la par que gratificantes, ha sabido llenarme de confianza.\\
 
 Gracias a todos y espero poder devolveros algún día todo lo que me habéis dado.
 
