--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -19,7 +19,7 @@ isbn={9688802255;9789688802250;},
 language={Spanish},
 }
 
-@article{Carreo2012AcercaDA, 
+@article{AcercaDe, 
 title={Acerca de algunas soluciones de ciertas ecuaciones de onda}, 
 volume={19}, 
 url={https://revistas.unal.edu.co/index.php/bolma/article/view/40861},
@@ -100,20 +100,6 @@ author = {Zuazua, Enrique},
 title = {Optimal and approximate control of finite-difference approximation schemes for the 1D wave equation},
 journal = {Rendiconti di Matematica e delle sue Applicazioni. Serie VII},
 year={2004},
-}
-
-@article{STRAND,
-title = {Summation by Parts for Finite Difference Approximations for d/dx},
-journal = {Journal of Computational Physics},
-volume = {110},
-number = {1},
-pages = {47-67},
-year = {1994},
-issn = {0021-9991},
-doi = {https://doi.org/10.1006/jcph.1994.1005},
-url = {https://www.sciencedirect.com/science/article/pii/S0021999184710059},
-author = {Bo Strand},
-abstract = {Finite difference approximations for d/dx which satisfy a summation by parts rule, have been evaluated, using different types of norms, H, by implementation in the symbolic language Maple. In the simpler diagonal norm, H = diag(λK;0, λ1, ..., λ2τ - 1, 1, ...) with all λi positive, difference operators accurate of order τ⩽4 at the boundary and accurate of order 2τ in the interior have been evaluated. However, it was found that the difference operators form multi-parameter families of difference operators when τ⩾3. In the general full norm, H = diag(H̃, I), with H̃ ∈ Rτ + 1 × τ + 1 being SPD, and I the identity matrix, difference operators accurate or order τ = 3, 5 at the boundary and accurate of order τ + 1 in the interior have been computed. As in the diagonal norm case we obtain a multiparameter family of operators when τ⩾3. Finally, a three-parameter family of difference approximations with accuracy three at and near the boundary and with accuracy four in the interior have been computed using restricted full norms. Here, H = diag(H̃ I), with H̃ ∈ Rτ + 2 × τ + 2 being SPD, and H̃ (:, 1) = H̃ (1, :)τ = Ke1 , where K is a constant e1 is the vector with the first element being one and the rest zero. Regardless of which norm we use, the parameters can be determined such that the bandwidth of the difference operators are minimized. This is of interest when parallel computers are used, since the bandwidth determines the memory requirement and also the amount of computational work.}
 }
 
 
@@ -285,6 +271,39 @@ collection={Cambridge Texts in Applied Mathematics}}
   publisher={Addison Wesley}
 }
 
+@book{TimeDependent,
+
+author={Gustafsson,Bertil and Kreiss,Heinz-Otto and Oliger,Joseph},
+year={2013},
+title={Time-Dependent Problems and Difference Methods},
+publisher={John Wiley \& Sons, Incorporated},
+address={New York},
+volume={123},
+keywords={Beräkningsmatematik; Computational Mathematics; Differential equations, Partial; Differential equations, Partial - Numerical solutions; Matematik; Mathematics; Natural Sciences; Naturvetenskap; Numerical solutions},
+isbn={9780470900567;0470900563;9781118548448;1118548442;},
+
+}
+
+@book{domain,
+  title={Partial Differential Equations: Analytical Solution Techniques},
+  author={Kevorkian, J.},
+  isbn={9780534122164},
+  lccn={lc89022096},
+  series={The Wadsworth \& Brooks/Cole Mathematics Series},
+  url={https://books.google.es/books?id=ubErAAAAYAAJ},
+  year={1990},
+  publisher={Springer US}
+}
+
+@book{universitaria,
+  title={F{\'\i}sica universitaria 01},
+  author={Young, H.D. and Freedman, R.A. and Sears, F.W. and Flores, V.A.F. and Ford, A.L. and Zemansky, M.W.},
+  number={v. 1},
+  isbn={9786074422887},
+  series={F{\'\i}sica universitaria},
+  url={https://books.google.es/books?id=qtsXYAAACAAJ},
+  publisher={Addison-Wesley; Pearson Educaci{\'o}n}
+}
 
 @comment{jabref-meta: selector_publisher:}
 
